fix: job manager overflow behaviors (styles)

--- a/src/discrete-layer/components/system-status/cell-renderer/job-details.cell-renderer.css
+++ b/src/discrete-layer/components/system-status/cell-renderer/job-details.cell-renderer.css
@@ -9,7 +9,7 @@
 }
 
 .tableFixHead { 
-  overflow: auto; 
+  overflow: overlay; 
   height: 220px;
   width:95%;
   margin: 0 auto;
